wp-content/themes/ideum/stylesheets/_layout.scss
#content {
  @include outer-container;
  background-color: $content-background-color;
}


@include media($small-screen-up) {
  .phone-only {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
  .phone-n-tablet {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
  .tablet-only {
    visibility: hidden !Important;
    position: absolute;
      left: -4000px; top:-4000px;
  }
  .tablet-n-desktop {
    visibility: hidden !Important;
    position: absolute;
      left: -4000px; top:-4000px;
  }
  .desktop-only {
    visibility: hidden !Important;
    position: absolute;
      left: -4000px; top:-4000px;
  }
}

@include media($medium-screen-up) {
  .phone-only {
    visibility: hidden !Important;
    position: absolute !Important;
      left: -4000px; top:-4000px;
  }
  .phone-n-tablet {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
  .tablet-only {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
  .tablet-n-desktop {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
  .desktop-only {
    visibility: hidden !Important;
    position: absolute !Important;
      left: -4000px; top:-4000px;
  }
}

@include media($large-screen-up) {
  .phone-only {
    visibility: hidden !Important;
    position: absolute !Important;
      left: -4000px; top:-4000px;
  }
  .phone-n-tablet {
    visibility: hidden !Important;
    position: absolute !Important;
      left: -4000px; top:-4000px;
  }
  .tablet-only {
    visibility: hidden !Important;
    position: absolute !Important;
      left: -4000px; top:-4000px;
  }
  .tablet-n-desktop {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
  .desktop-only {
    visibility: visible !Important;
    position: initial;
      left: initial; top: initial;
  }
}

